--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
             margin-right: 10px;
 
         }
+        .star{
+            color: grey;
+        }
     </style>
 </head>
 
@@ -99,6 +102,17 @@
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Hailey's Instagram url</label>
         </div>
+        <div class="star">
+            <div class="input-group mb-3">
+                <button class="btn btn-outline-secondary" type="button">Button</button>
+                <select class="form-select" id="inputGroupSelect03" aria-label="Example select with button addon">
+                  <option selected>Choose</option>
+                  <option value="1">⭐</option>
+                  <option value="2">⭐⭐⭐</option>
+                  <option value="3">⭐⭐⭐⭐⭐</option>
+                </select>
+              </div>
+        </div>
         <div class="form-floating">
             <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
             <label for="floatingTextarea">Comments</label>
@@ -108,56 +122,60 @@
         <button type="button" class="btn btn-outline-dark">close</button>
     </div>
 </div>
-    <div class="mycards">
-        <div class="row row-cols-1 row-cols-md-4 g-4">
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Spring</h5>
-                        <p class="card-text">This is Hailey's diary suring Spring season.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">나의 의견</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Spring</h5>
-                        <p class="card-text">This is Hailey's diary suring Spring season.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">나의 의견</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Spring</h5>
-                        <p class="card-text">This is Hailey's diary suring Spring season.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">나의 의견</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Spring</h5>
-                        <p class="card-text">This is Hailey's diary suring Spring season.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">나의 의견</p>
-                    </div>
+<div class="mycards">
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+        <div class="col">
+            <div class="card h-100">
+                <img src="https://i.pinimg.com/originals/df/a4/61/dfa4612a233c416f917aca3e834b14b6.jpg"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Spring</h5>
+                    <p class="card-text">This is Hailey's diary during Spring season</p>
+                    <p>⭐⭐⭐⭐⭐</p>
+                    <p class="my comment">Write Spring's memories here</p>
                 </div>
             </div>
         </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="https://i.pinimg.com/originals/6e/af/24/6eaf2414fa43fa32a2336225a6b1eac2.jpg"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Summer</h5>
+                    <p class="card-text">This is Hailey's diary during Summer season</p>
+                    <p>⭐⭐⭐⭐⭐</p>
+                    <p class="my comment">Write Summer's memories here</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="https://i.pinimg.com/originals/7f/28/3f/7f283fe50595724a4d4fd7366930b921.jpg"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Autumn</h5>
+                    <p class="card-text">This is Hailey's diary during Autumn season</p>
+                    <p>⭐⭐⭐⭐⭐</p>
+                    <p class="my comment">Write Autumn's memories here</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="https://i.pinimg.com/564x/d1/db/42/d1db426e0fec7c884853dd1c3c39a2a5.jpg"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Winter</h5>
+                    <p class="card-text">This is Hailey's diary during Winter season</p>
+                    <p>⭐⭐⭐⭐⭐</p>
+                    <p class="my comment">Write Winter's memories here</p>
+                </div>
+                
+            </div>
+        </div>
+      </div>  
+    </div>
+</div>    
 </body>
+
 </html>
